--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "@mui/material": "^5.10.5",
     "@mui/x-data-grid": "^5.17.2",
     "@nivo/bar": "^0.80.0",
-    "@nivo/core": "^0.79.0",
+    "@nivo/core": "^0.80.0",
     "@nivo/geo": "^0.80.0",
-    "@nivo/line": "^0.79.1",
+    "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "chart": "^3.9.1",
+    "chart": "^0.1.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
@@ -36,7 +36,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
